# PS3-Dissertation-POC

./: README.md
Attacker/Kernel Payload/: CMakeLists.txt  README.md  build.bat  build_hen.bat
Attacker/Kernel Payload/hen_gen/: Main.cpp
Attacker/Kernel Payload/hen_payloads/: PS3HEN.BIN_CEX_482  PS3HEN.BIN_CEX_484  PS3HEN.BIN_DEX_484  README.md
Attacker/Kernel Payload/linker/: Payload.ld
Attacker/Kernel Payload/src/: Config.h  ELF.h  Entry.cpp  Exploit.cpp  Exploit.h  FNV.h  Hex.cpp  Hex.h  HookAsm.s  Hooks.cpp  Hooks.h  Init.S  Libc.cpp  Libc.h  PPC.h  PatternScanner.h  SpinLock.h  Types.h  UserMemory.cpp  UserMemory.h  Utils.h
Attacker/Kernel Payload/src/LV1/: LV1.h  LV1Calls.h
Attacker/Kernel Payload/src/LV2/: Console.h  LV2.cpp  LV2.h  Memory.h  Network.h  PRX.h  Process.h  Scheduler.h  String.h  SystemCalls.h  Thread.h  Time.h
Attacker/Kernel Payload/toolchain/: toolchain.cmake
Attacker/Website/: README.md  index.html  ps3hen_v100.js
Attacker/Website/4.84/: PS3HEN.p3t
Victim/: README.md  vuln_service.py
